--- a/modus/src/components/Banner.css
+++ b/modus/src/components/Banner.css
@@ -37,6 +37,7 @@ h1 {
 p {
     margin: 10px 0;
     font-size: 14px;
+    color: var(--vscode-activityBarTop-foreground);
 }
 
 .instructions {
